2008-07-16  Matthias Clasen  <mclasen@redhat.com>

	Bug 482413 - get_contents_stdio -- overflow and memory corruption

	* glib/gfileutils.c (get_contents_stdio): Detect overflow and
	error out. Reported by Morten Welinder. 

2008-07-16  Matthias Clasen  <mclasen@redhat.com>

	Bug 542332 – small fix for error message in GMarkup
	
	* glib/gmarkup.c: Improve an error message. 
	Patch by Ryan Lortie

2008-07-14  Matthias Clasen  <mclasen@redhat.com>

	Bug 428048 – 2 of 51 tests fail on Solaris

	* tests/iochannel-test.c: Ignore the error if iconv doesn't
	support EUC-JP.

2008-07-14  Matthias Clasen  <mclasen@redhat.com>

	* tests/option-test.c: Print error messages when something fails.

2008-07-14  Matthias Clasen  <mclasen@redhat.com>

	Bug 467707 – test_iconv_state() in tests/convert-test.c fails on AIX 5.3

	* tests/convert-test.c (test_iconv_state): Skip this test if
	CP1255 is not supported.  

2008-07-10  Ryan Lortie  <desrt@desrt.ca>

 	* docs/reference/glib/glib-sections.txt:
 	* glib/glib.symbols:
 	* glib/gmarkup.c:
 	* glib/gmarkup.h: add functions g_markup_parse_context_{push,pop} in
 	order to provide some small hooks on which to build easy-to-use
 	subparsers.
 
 	* glib/tests/Makefile: add new test
 	* glib/tests/markup-subparser.c: new test for subparsers
 
 	Fixes bug #337518.

2008-07-05  Matthias Clasen  <mclasen@redhat.com>

	Bug 528317 – GRegex does not allow recursion limit

	* glib/pcre/Makefile.am: Set a sane default recursion limit
	of 8192 instead of 1000000. 
	Patch by Mart Raudsepp.

2008-07-04  Behdad Esfahbod  <behdad@gnome.org>

	Bug 541507 – Ambiguous description of assigned characters in the Glib
	Unicode Manipulation reference

	* glib/guniprop.c
	(g_unichar_isgraph): Return true for PrivateUse too.
	(g_unichar_isprint): Return true for PrivateUse too.
	(g_unichar_isdefined): Return false for Surrogate.

2008-07-04  Michael Natterer  <mitch@imendio.com>

	Bug 541208 – Functions to easily install and use signals without