@@ -1,5 +1,13 @@
 2008-07-16  Matthias Clasen  <mclasen@redhat.com>
 
+	Bug 406120 – g_ascii_strtod
+
+	* glib/gstrfuncs.c (g_ascii_strtod): Document that this
+	function does accept localized infinities and nans. Reported
+	by Morten Welinder.
+
+2008-07-16  Matthias Clasen  <mclasen@redhat.com>
+
 	Bug 482413 - get_contents_stdio -- overflow and memory corruption
 
 	* glib/gfileutils.c (get_contents_stdio): Detect overflow and
